rapido-chart/templates/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: rapido-prod

spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway

  template:
    metadata:
      labels:
        app: api-gateway

    spec:
      containers:
        - name: api-gateway
          image: api-gateway:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: rapido-prod

spec:
  selector:
    app: api-gateway

  ports:
    - port: 8080
      targetPort: 8080

  type: ClusterIP
