rapido-chart/templates/driver-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: driver-service
  namespace: rapido-prod

spec:
  replicas: 1

  selector:
    matchLabels:
      app: driver-service

  template:
    metadata:
      labels:
        app: driver-service

    spec:
      containers:
        - name: driver-service
          image: rapido-clone-backend-driver-service:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: driver-service
  namespace: rapido-prod

spec:
  selector:
    app: driver-service

  ports:
    - port: 8083
      targetPort: 8083

  type: ClusterIP
