rapido-chart/templates/eureka-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
  namespace: rapido-prod

spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server

  template:
    metadata:
      labels:
        app: eureka-server

    spec:
      containers:
        - name: eureka-server
          image: rapido-clone-backend-eureka-server:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8761

---
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
  namespace: rapido-prod

spec:
  selector:
    app: eureka-server

  ports:
    - port: 8761
      targetPort: 8761

  type: ClusterIP
