rapido-chart/templates/payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: rapido-prod

spec:
  replicas: 1

  selector:
    matchLabels:
      app: payment-service

  template:
    metadata:
      labels:
        app: payment-service

    spec:
      containers:
        - name: payment-service
          image: rapido-clone-backend-payment-service:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: rapido-prod

spec:
  selector:
    app: payment-service

  ports:
    - port: 8085
      targetPort: 8085

  type: ClusterIP
